Add kj vim key map to esc

--- a/VSCodeSettings/settings.json
+++ b/VSCodeSettings/settings.json
@@ -30,5 +30,12 @@
   "csharpextensions.useThisForCtorAssignments": false,
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  },
+  "vim.insertModeKeyBindings": [
+    //Map enter Normal mode in vim from Esc to k & j
+    {
+      "before": ["k", "j"],
+      "after": ["<Esc>"]
+    }
+  ]
 }
